force-app/main/default/objects/Account/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <inlineHelpText>Who approved the priority flag and additional details surrounding the reason</inlineHelpText>
    <label>Additional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>