force-app/main/default/objects/Account/fields/AMUser__c.field-meta.xml
<CustomField>
    <fullName>AMUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_AM</relationshipName>
    <type>Lookup</type>
</CustomField>