force-app/main/default/objects/Account/fields/ARC_Core__c.field-meta.xml
<CustomField>
    <fullName>ARC_Core__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARC Core</label>
    <type>Checkbox</type>
</CustomField>