force-app/main/default/objects/Account/fields/ARC_Core_Closed_Lost_Competitor__c.field-meta.xml
<CustomField>
    <fullName>ARC_Core_Closed_Lost_Competitor__c</fullName>
    <label>ARC Core Closed Lost Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closed_Lost_Competitor</valueSetName>
    </valueSet>
</CustomField>