force-app/main/default/objects/Account/fields/ARC_Core_Lost__c.field-meta.xml
<CustomField>
    <fullName>ARC_Core_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARC Core Lost</label>
    <type>Checkbox</type>
</CustomField>