force-app/main/default/objects/Account/fields/ARC_Core_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>ARC_Core_Lost_Reason__c</fullName>
    <label>ARC Core Lost Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closed_Lost_Reason</valueSetName>
    </valueSet>
</CustomField>