force-app/main/default/objects/Account/fields/ARC_Pilot__c.field-meta.xml
<CustomField>
    <fullName>ARC_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARC Pilot</label>
    <type>Checkbox</type>
</CustomField>