force-app/main/default/objects/Account/fields/Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Number__c</fullName>
    <label>Bill To Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>