force-app/main/default/objects/Account/fields/Credit_Verification_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Verification_Request_Date__c</fullName>
    <label>Credit Verification Request Date</label>
    <type>Date</type>
</CustomField>