force-app/main/default/objects/Account/fields/CRMG_WF__Activity_Status__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Activity_Status__c</fullName>
    <label>Activity Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>