force-app/main/default/objects/Account/fields/CRMG_WF__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>