force-app/main/default/objects/Account/fields/CRMG_WF__CheckBox__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckBox</label>
    <type>Checkbox</type>
</CustomField>