force-app/main/default/objects/Account/fields/Destination_Number__c.field-meta.xml
<CustomField>
    <fullName>Destination_Number__c</fullName>
    <label>Destination Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>