force-app/main/default/objects/Account/fields/Detailed_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Account_Type__c</fullName>
    <label>Detailed Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School for the Deaf</fullName>
            </value>
            <value>
                <fullName>AMTEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>