force-app/main/default/objects/Account/fields/Disable_Address_Update__c.field-meta.xml
<CustomField>
    <fullName>Disable_Address_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Address Update</label>
    <type>Checkbox</type>
</CustomField>