force-app/main/default/objects/Account/fields/Dual_Language__c.field-meta.xml
<CustomField>
    <fullName>Dual_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Language</label>
    <type>Checkbox</type>
</CustomField>