force-app/main/default/objects/Account/fields/Dual_Language_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Dual_Language_Pilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Language Pilot</label>
    <type>Checkbox</type>
</CustomField>