force-app/main/default/objects/Account/fields/Emergency_Closure__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Closure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Closure</label>
    <type>Checkbox</type>
</CustomField>