force-app/main/default/objects/Account/fields/Emergency_Closure_Delivery_Days__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Closure_Delivery_Days__c</fullName>
    <label>Emergency Closure Delivery Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>