force-app/main/default/objects/Account/fields/Emergency_Closure_End__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Closure_End__c</fullName>
    <label>Emergency Closure End</label>
    <type>Date</type>
</CustomField>