force-app/main/default/objects/Account/fields/Emergency_Closure_Hours__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Closure_Hours__c</fullName>
    <label>Emergency Closure Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>