force-app/main/default/objects/Account/fields/Emergency_Closure_Start__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Closure_Start__c</fullName>
    <label>Emergency Closure Start</label>
    <type>Date</type>
</CustomField>