force-app/main/default/objects/Account/fields/Fall_Break_End__c.field-meta.xml
<CustomField>
    <fullName>Fall_Break_End__c</fullName>
    <label>Fall Break End</label>
    <type>Date</type>
</CustomField>