force-app/main/default/objects/Account/fields/Fall_Break_Start__c.field-meta.xml
<CustomField>
    <fullName>Fall_Break_Start__c</fullName>
    <label>Fall Break Start</label>
    <type>Date</type>
</CustomField>