force-app/main/default/objects/Account/fields/FIN_Charter_School_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>FIN_Charter_School_Approval_Date__c</fullName>
    <label>Credit Verification Approval Date</label>
    <type>Date</type>
</CustomField>