force-app/main/default/objects/Account/fields/FIN_Charter_School_Approval_Expiration__c.field-meta.xml
<CustomField>
    <fullName>FIN_Charter_School_Approval_Expiration__c</fullName>
    <label>Credit Verification Approval Expiration</label>
    <type>Date</type>
</CustomField>