force-app/main/default/objects/Account/fields/FIN_Custom_Finance_Needs__c.field-meta.xml
<CustomField>
    <fullName>FIN_Custom_Finance_Needs__c</fullName>
    <label>Custom Finance Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>