force-app/main/default/objects/Account/fields/FIN_Finance_Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>FIN_Finance_Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance/Invoice Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Finance/Invoice Contact)</relationshipLabel>
    <relationshipName>Finance_Invoice_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>