force-app/main/default/objects/Account/fields/FIN_Freight_Shipments_Accepted__c.field-meta.xml
<CustomField>
    <fullName>FIN_Freight_Shipments_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freight Shipments Accepted</label>
    <type>Checkbox</type>
</CustomField>