force-app/main/default/objects/Account/fields/Final_Year_of_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Final_Year_of_Implementation__c</fullName>
    <label>Final Year of Implementation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>