force-app/main/default/objects/Account/fields/Free_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Free_Lunch__c</fullName>
    <label>Free Lunch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>