force-app/main/default/objects/Account/fields/High_Grade__c.field-meta.xml
<CustomField>
    <fullName>High_Grade__c</fullName>
    <label>High Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>