force-app/main/default/objects/Account/fields/ICRM_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>InforCRM Account ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>