force-app/main/default/objects/Account/fields/ICRM_Create_date__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Create_date__c</fullName>
    <label>ICRM Create date</label>
    <type>Date</type>
</CustomField>