force-app/main/default/objects/Account/fields/Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Import_Source__c</fullName>
    <label>Import Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>External Document</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ICRM Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>