force-app/main/default/objects/Account/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <length>150</length>
    <type>Text</type>
</CustomField>