force-app/main/default/objects/Account/fields/Locale_Code__c.field-meta.xml
<CustomField>
    <fullName>Locale_Code__c</fullName>
    <label>Locale Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>