force-app/main/default/objects/Account/fields/Low_Grade__c.field-meta.xml
<CustomField>
    <fullName>Low_Grade__c</fullName>
    <label>Low Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>