force-app/main/default/objects/Account/fields/Magnet__c.field-meta.xml
<CustomField>
    <fullName>Magnet__c</fullName>
    <label>Magnet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>