force-app/main/default/objects/Account/fields/Mardi_Gras_End__c.field-meta.xml
<CustomField>
    <fullName>Mardi_Gras_End__c</fullName>
    <label>Mardi Gras End</label>
    <type>Date</type>
</CustomField>