force-app/main/default/objects/Account/fields/Mardi_Gras_Start__c.field-meta.xml
<CustomField>
    <fullName>Mardi_Gras_Start__c</fullName>
    <label>Mardi Gras Start</label>
    <type>Date</type>
</CustomField>