force-app/main/default/objects/Account/fields/Mid_Winter_Feb_Break_End__c.field-meta.xml
<CustomField>
    <fullName>Mid_Winter_Feb_Break_End__c</fullName>
    <label>Mid-Winter (Feb) Break End</label>
    <type>Date</type>
</CustomField>