force-app/main/default/objects/Account/fields/Mid_Winter_Mar_Break_Start__c.field-meta.xml
<CustomField>
    <fullName>Mid_Winter_Mar_Break_Start__c</fullName>
    <label>Mid-Winter (Mar) Break Start</label>
    <type>Date</type>
</CustomField>