force-app/main/default/objects/Account/fields/Most_Recent_Month_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Month_to_Ship__c</fullName>
    <description>The most recent month to ship of the account&apos;s opportunities</description>
    <label>Most Recent Month to Ship</label>
    <summarizedField>Opportunity.Month_to_Ship_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Proposal_Status__c</field>
        <operation>equals</operation>
        <value>Open, Closed - Won, Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>