force-app/main/default/objects/Account/fields/NCES_Type__c.field-meta.xml
<CustomField>
    <fullName>NCES_Type__c</fullName>
    <label>NCES Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>