force-app/main/default/objects/Account/fields/ncesleaid__c.field-meta.xml
<CustomField>
    <fullName>ncesleaid__c</fullName>
    <description>NCES District Code</description>
    <externalId>true</externalId>
    <inlineHelpText>NCES District Code</inlineHelpText>
    <label>NCES District ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>