force-app/main/default/objects/Account/fields/ncessch__c.field-meta.xml
<CustomField>
    <fullName>ncessch__c</fullName>
    <description>NCES School Code</description>
    <externalId>true</externalId>
    <inlineHelpText>NCES School Code</inlineHelpText>
    <label>NCES Public School ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>