force-app/main/default/objects/Account/fields/No_NCES_ID__c.field-meta.xml
<CustomField>
    <fullName>No_NCES_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No NCES ID</label>
    <type>Checkbox</type>
</CustomField>