force-app/main/default/objects/Account/fields/Nonpublic_School_Funding__c.field-meta.xml
<CustomField>
    <fullName>Nonpublic_School_Funding__c</fullName>
    <label>Nonpublic School Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Funded by a Public District</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>