force-app/main/default/objects/Account/fields/Number_of_Teachers_in_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Teachers_in_Pilot__c</fullName>
    <label>Number of Teachers in Pilot</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>