force-app/main/default/objects/Account/fields/Object_Total__c.field-meta.xml
<CustomField>
    <fullName>Object_Total__c</fullName>
    <formula>Number_Of_Opportunities__c +  Number_Of_Cases__c +  Number_Of_Contacts__c +  Number_Of_Events__c +  Number_Of_Files__c +  Number_Of_Notes__c +  Number_Of_Contracts__c +  Bill_To_Number__c +  Ship_to_Number__c +  Destination_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>