force-app/main/default/objects/Account/fields/OPS_Custom_Shipping_Needs__c.field-meta.xml
<CustomField>
    <fullName>OPS_Custom_Shipping_Needs__c</fullName>
    <label>Custom Shipping Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>