force-app/main/default/objects/Account/fields/OPS_Forklift_Available__c.field-meta.xml
<CustomField>
    <fullName>OPS_Forklift_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forklift Available</label>
    <type>Checkbox</type>
</CustomField>