force-app/main/default/objects/Account/fields/OPS_Loading_Dock_Available__c.field-meta.xml
<CustomField>
    <fullName>OPS_Loading_Dock_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loading Dock Available</label>
    <type>Checkbox</type>
</CustomField>