force-app/main/default/objects/Account/fields/OPS_Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>OPS_Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Shipping Contact)</relationshipLabel>
    <relationshipName>OPS_Shipping_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>