force-app/main/default/objects/Account/fields/Parent_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Parent Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>