force-app/main/default/objects/Account/fields/ParentAccountTEST__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountTEST__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account (TEST)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Accounts (TEST)</relationshipLabel>
    <relationshipName>ChildAccountsTest</relationshipName>
    <type>Lookup</type>
</CustomField>