force-app/main/default/objects/Account/fields/ParentNcesId__c.field-meta.xml
<CustomField>
    <fullName>ParentNcesId__c</fullName>
    <description>NCES ID of the parent district.</description>
    <label>Parent NCES ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>