force-app/main/default/objects/Account/fields/PCUser__c.field-meta.xml
<CustomField>
    <fullName>PCUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_PC</relationshipName>
    <type>Lookup</type>
</CustomField>