force-app/main/default/objects/Account/fields/Pilot_Grades__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Grades__c</fullName>
    <label>Pilot Grades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade_Levels</valueSetName>
    </valueSet>
</CustomField>