force-app/main/default/objects/Account/fields/Pilot_Intended_Length__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Intended_Length__c</fullName>
    <label>Pilot Intended Length</label>
    <type>TextArea</type>
</CustomField>