force-app/main/default/objects/Account/fields/Pilot_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pilot Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select one of the related opportunities.</errorMessage>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pilot Accounts</relationshipLabel>
    <relationshipName>PilotAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>