force-app/main/default/objects/Account/fields/Pilot_Starting_Year__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Starting_Year__c</fullName>
    <label>Pilot Starting Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>