force-app/main/default/objects/Account/fields/Priority_Customer__c.field-meta.xml
<CustomField>
    <fullName>Priority_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Priority Customer flag if approved by management</description>
    <label>Priority Customer</label>
    <type>Checkbox</type>
</CustomField>