force-app/main/default/objects/Account/fields/Priority_Reason__c.field-meta.xml
<CustomField>
    <fullName>Priority_Reason__c</fullName>
    <label>Priority Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical Implementation</fullName>
            </value>
            <value>
                <fullName>Content Sensitivity</fullName>
            </value>
            <value>
                <fullName>Delivery/Unpack Concerns</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>