force-app/main/default/objects/Account/fields/Program_Contact__c.field-meta.xml
<CustomField>
    <fullName>Program_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Program_contact</relationshipName>
    <type>Lookup</type>
</CustomField>