force-app/main/default/objects/Account/fields/Project_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Project_of_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project of Study</label>
    <type>Checkbox</type>
</CustomField>