force-app/main/default/objects/Account/fields/PSS_ASSOC_1__c.field-meta.xml
<CustomField>
    <fullName>PSS_ASSOC_1__c</fullName>
    <description>Private School Association Membership (if any)</description>
    <inlineHelpText>Private School Association Membership (if any)</inlineHelpText>
    <label>PSS_ASSOC_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>