force-app/main/default/objects/Account/fields/PSS_SCHOOL_ID__c.field-meta.xml
<CustomField>
    <fullName>PSS_SCHOOL_ID__c</fullName>
    <description>Private School ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Private School ID</inlineHelpText>
    <label>NCES Private School ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>