force-app/main/default/objects/Account/fields/Reduced_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Reduced_Lunch__c</fullName>
    <label>Reduced Lunch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>