force-app/main/default/objects/Account/fields/Regional_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>Regional_Vice_President__c</fullName>
    <formula>Territory_Name__r.Owner:User.Regional_Vice_President__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regional Vice President</label>
    <type>Text</type>
</CustomField>