force-app/main/default/objects/Account/fields/Related_TerritoryID__c.field-meta.xml
<CustomField>
    <fullName>Related_TerritoryID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Forms a join relationship to the TerritoryID that this account is assigned to, which will in turn inherit the Territory that the TerritoryID is assigned to.</description>
    <inlineHelpText>Forms a join relationship to the TerritoryID that this account is assigned to, which will in turn inherit the Territory that the TerritoryID is assigned to.</inlineHelpText>
    <label>Related TerritoryID</label>
    <referenceTo>Territory_ID__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>