force-app/main/default/objects/Account/fields/RVPUser__c.field-meta.xml
<CustomField>
    <fullName>RVPUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_RVP</relationshipName>
    <type>Lookup</type>
</CustomField>